[ARMv7] Fix up some B3 validation errors in B3LowerToAir https://bugs.webkit.org/show_bug.cgi?id=283810

Reviewed by Yusuke Suzuki.

This fixes some of the the remaining wasm test failures.

* Source/JavaScriptCore/b3/B3LowerInt64.cpp:

Canonical link: https://commits.webkit.org/287170@main